removing submodule reference